--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </div>
 <!-- partial -->
   <script  src="./script.js"></script>
-  <script> src="./mobile.js"</script>
+  <script src="./mobile.js"></script>
 
 </body>
 </html>
